[gd_scene load_steps=24 format=3 uid="uid://b2lqup7mox2ux"]

[ext_resource type="Script" path="res://Scripts/hud_armaduras.gd" id="1_n40bl"]
[ext_resource type="Texture2D" uid="uid://coxa5wkxkrcki" path="res://ui/UI/RectangleBox_96x96.png" id="1_u23a4"]
[ext_resource type="Theme" uid="uid://djhcai4p6n8i1" path="res://Assets/tema_butaoha.tres" id="2_3l1ge"]
[ext_resource type="Texture2D" uid="uid://d1w2coi1kgw6j" path="res://ui/UI/Button_52x14.png" id="2_pjwwf"]
[ext_resource type="Texture2D" uid="uid://qi7je4g33bvc" path="res://ui/UI/TitleBox_64x16.png" id="3_bcksf"]
[ext_resource type="Texture2D" uid="uid://c4fpy0rwx2gcl" path="res://ui/UI/QuitIcon.png" id="4_vatg1"]
[ext_resource type="Texture2D" uid="uid://bmu78duf5lhgq" path="res://ui/UI/BlackBigCircleBoxWithBorder_27x27.png" id="5_mch2k"]
[ext_resource type="Texture2D" uid="uid://qncodmth4jjg" path="res://ui/UI/BuffIcons(WithoutStroke)_16x16.png" id="6_o3usq"]
[ext_resource type="Texture2D" uid="uid://dmh573k8gu1r0" path="res://ui/UI/CharacterBox_56x57.png" id="7_hins0"]
[ext_resource type="Texture2D" uid="uid://bygck5p5e7fqh" path="res://Assets/[4] Full Spritesheet.png" id="8_62sj4"]
[ext_resource type="Texture2D" uid="uid://dpg8fjch2583k" path="res://ui/UI/AttributesIcons_17x17.png" id="9_f5f76"]
[ext_resource type="PackedScene" uid="uid://c4vw61dd13vnu" path="res://Scenes/inventory_slot_item.tscn" id="13_xjyyn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1ap"]
atlas = ExtResource("8_62sj4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuei2"]
atlas = ExtResource("8_62sj4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw443"]
atlas = ExtResource("8_62sj4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkwjh"]
atlas = ExtResource("8_62sj4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oklwm"]
atlas = ExtResource("8_62sj4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkiw1"]
atlas = ExtResource("8_62sj4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqsq2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuei2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw443")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkwjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oklwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkiw1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ejktl"]
atlas = ExtResource("6_o3usq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3djn"]
atlas = ExtResource("9_f5f76")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie1lu"]
atlas = ExtResource("6_o3usq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hroxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejktl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3djn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie1lu")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="hud_armaduras" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_3l1ge")
script = ExtResource("1_n40bl")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.565)

[node name="TextureRect" type="TextureRect" parent="Control/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -243.0
offset_right = 424.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u23a4")

[node name="box_title" type="TextureRect" parent="Control/ColorRect/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -180.0
offset_right = -37.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pjwwf")

[node name="title" type="Label" parent="Control/ColorRect/TextureRect/box_title"]
layout_mode = 0
offset_left = 79.0
offset_top = 26.0
offset_right = 207.0
offset_bottom = 49.0
text = "Ferreiro"

[node name="exit" type="TextureButton" parent="Control/ColorRect/TextureRect"]
layout_mode = 0
offset_left = 700.0
offset_top = 48.0
offset_right = 721.0
offset_bottom = 69.0
scale = Vector2(2.66438, 2.81077)
texture_normal = ExtResource("4_vatg1")

[node name="box_coins" type="TextureRect" parent="Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -496.0
offset_right = 75.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_bcksf")

[node name="sprit_coins" type="AnimatedSprite2D" parent="Control/ColorRect/TextureRect/box_coins"]
position = Vector2(40, 33)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_dqsq2")
autoplay = "default"

[node name="label_coins" type="Label" parent="Control/ColorRect/TextureRect/box_coins"]
layout_mode = 0
offset_left = 71.0
offset_top = 26.0
offset_right = 119.0
offset_bottom = 49.0
text = "00"

[node name="box_icon" type="TextureRect" parent="Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -190.0
offset_right = -246.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_mch2k")

[node name="icon" type="AnimatedSprite2D" parent="Control/ColorRect/TextureRect/box_icon"]
position = Vector2(48, 45)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_hroxa")
autoplay = "default"
frame_progress = 0.253757

[node name="box_melhorias" type="TextureRect" parent="Control/ColorRect/TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -84.0
offset_right = 308.01
offset_bottom = 178.33
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_hins0")
expand_mode = 1

[node name="GridSlots" type="GridContainer" parent="Control/ColorRect/TextureRect/box_melhorias"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 0
offset_left = 23.0
offset_top = 19.0
offset_right = 108.0
offset_bottom = 104.0
mouse_filter = 2
theme_override_constants/h_separation = 9
theme_override_constants/v_separation = 9
columns = 6

[node name="SlotTest" parent="Control/ColorRect/TextureRect/box_melhorias/GridSlots" instance=ExtResource("13_xjyyn")]
layout_mode = 2

[connection signal="pressed" from="Control/ColorRect/TextureRect/exit" to="Control" method="_on_exit_pressed"]
